Pressing autocomplete in the console after tool_settings prints warning message #96250

Closed
opened 2022-03-09 02:13:09 +01:00 by sicutunum · 7 comments

System Information
Operating system: Windows-10-10.0.19042-SP0 64 Bits
Graphics card: GeForce GT 740/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 456.71

Blender Version
Broken: version: 3.1.0 Release Candidate, branch: master, commit date: 2022-03-07 11:37, hash: 00f6e4c990
Worked: (newest version of Blender that worked as expected)

Short description of error
Pressing autocomplete after entering bpy.context.tool_settings. into the Py Console prints a strange warning message to the system console. Just reporting it incase it wasn't supposed to be there. The message:

WARN (bpy.rna): C:\Users\blender\git\blender-v310\blender.git\source\blender\python\intern\bpy_rna.c:1352 pyrna_enum_to_py: current value '0' matches no enum in 'ToolSettings', '(null)', 'uv_relax_method'

Exact steps for others to reproduce the error

  1. Open Blender.
  2. Go to the Scripting workspace.
  3. Enter bpy.context.tool_settings. into the Py Console and press Tab or Console > Auto Complete.
  4. Warning message prints to system console.
**System Information** Operating system: Windows-10-10.0.19042-SP0 64 Bits Graphics card: GeForce GT 740/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 456.71 **Blender Version** Broken: version: 3.1.0 Release Candidate, branch: master, commit date: 2022-03-07 11:37, hash: `00f6e4c990` Worked: (newest version of Blender that worked as expected) **Short description of error** Pressing autocomplete after entering bpy.context.tool_settings. into the Py Console prints a strange warning message to the system console. Just reporting it incase it wasn't supposed to be there. The message: ``` WARN (bpy.rna): C:\Users\blender\git\blender-v310\blender.git\source\blender\python\intern\bpy_rna.c:1352 pyrna_enum_to_py: current value '0' matches no enum in 'ToolSettings', '(null)', 'uv_relax_method' ``` **Exact steps for others to reproduce the error** 1. Open Blender. 2. Go to the Scripting workspace. 3. Enter **bpy.context.tool_settings.** into the Py Console and press Tab or Console > Auto Complete. 4. Warning message prints to system console.
Author

Added subscriber: @sicutunum

Added subscriber: @sicutunum

#73226 was marked as duplicate of this issue

#73226 was marked as duplicate of this issue

This issue was referenced by 136f0910ff

This issue was referenced by 136f0910ff662a74b02c30ae9b79275bc74c8406

Changed status from 'Needs Triage' to: 'Resolved'

Changed status from 'Needs Triage' to: 'Resolved'
Campbell Barton self-assigned this 2022-03-09 06:12:08 +01:00
Member

Added subscriber: @PratikPB2123

Added subscriber: @PratikPB2123
Member

@ideasman42 hi, I just refreshed the page and saw you have committed the fix. Thanks.
I also realized that the default value for relax method was not set. This is actually reported here- #73226 (UV Relaxation Method is not set)
Now I'll just merge other report into this (and will abandon the patch D6753).

@ideasman42 hi, I just refreshed the page and saw you have committed the fix. Thanks. I also realized that the default value for relax method was not set. This is actually reported here- #73226 (UV Relaxation Method is not set) Now I'll just merge other report into this (and will abandon the patch [D6753](https://archive.blender.org/developer/D6753)).
Member

Added subscriber: @Blendify

Added subscriber: @Blendify
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#96250
No description provided.