Fix T96250: Invalid default for uv_relax_method

Correct the default & version existing files.